--- a/index.html
+++ b/index.html
@@ -37,59 +37,62 @@
           <form action="">
             <div class="f-section">
               <div class="section1">
-                <div class="input__container">
-                  <label for="fname">First Name</label>
-                  <input
-                    type="text"
-                    id="fname"
-                    name="fname"
-                    placeholder="Tolu"
-                    class="input__focus"
-                  />
+                <div class="section__input__wrapper">
+                  <div class="input__container">
+                    <label for="fname">First Name</label>
+                    <input
+                      type="text"
+                      id="fname"
+                      name="fname"
+                      placeholder="Tolu"
+                      class="input__focus"
+                    />
+                  </div>
+                  <div class="input__container">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lname" />
+                  </div>
                 </div>
-
-                <div class="input__container">
-                  <label for="gender">Gender</label>
-                  <input type="text" id="gender" placeholder="Select here" />
-                  <img
-                    src="./assets/u_angle-down.svg"
-                    class="select__genderIcon"
-                    alt="select image"
-                  />
+                <div class="section__input__wrapper">
+                  <div class="input__container">
+                    <label for="gender">Gender</label>
+                    <input type="text" id="gender" placeholder="Select here" />
+                    <img
+                      src="./assets/u_angle-down.svg"
+                      class="select__genderIcon"
+                      alt="select image"
+                    />
+                  </div>
+                  <div class="input__container">
+                    <label for="dob">Date of Birth</label>
+                    <input type="text" id="dob" placeholder="Select here" />
+                    <img
+                      src="./assets/u_a_calendar-alt.svg"
+                      class="select__dobIcon"
+                      alt="calender image"
+                    />
+                  </div>
                 </div>
-                <div class="input__container">
-                  <label for="weight">Weight (KG)</label>
-                  <input type="text" id="weight" placeholder="Enter Weight" />
-                </div>
-              </div>
-              <div class="form__section2">
-                <div class="input__container">
-                  <label for="lname">Last Name</label>
-                  <input type="text" id="lname" name="lname" />
-                </div>
-                <div class="input__container">
-                  <label for="dob">Date of Birth</label>
-                  <input type="text" id="dob" placeholder="Select here" />
-                  <img
-                    src="./assets/u_a_calendar-alt.svg"
-                    class="select__dobIcon"
-                    alt="calender image"
-                  />
-                </div>
-                <div class="input__container">
-                  <label for="height">Height (CM)</label>
-                  <input
-                    type="text"
-                    id="height"
-                    placeholder="Enter height here.."
-                  />
+                <div class="section__input__wrapper">
+                  <div class="input__container">
+                    <label for="weight">Weight (KG)</label>
+                    <input type="text" id="weight" placeholder="Enter Weight" />
+                  </div>
+                  <div class="input__container">
+                    <label for="height">Height (CM)</label>
+                    <input
+                      type="text"
+                      id="height"
+                      placeholder="Enter height here.."
+                    />
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="l-section">
               <div class="input__container">
-                <label  for="activity-level">Activity Level</label>
+                <label for="activity-level">Activity Level</label>
                 <input
                   type="text"
                   id="activity-level"
@@ -111,18 +114,19 @@
                   alt="Show image"
                 />
               </div>
-             <div class="l-section__submit">
+              <div class="l-section__submit">
                 <button id="btn">Register</button>
                 <p>
                   By clicking Register, you agree to our
                   <span>Terms of Use</span> and our <span>Privacy Policy</span>
                 </p>
-             </div>
+              </div>
             </div>
           </form>
         </section>
         <p class="mobile">
-          By clicking Register, you agree to our <span>Terms of Use</span> and our <span>Privacy Policy</span>
+          By clicking Register, you agree to our <span>Terms of Use</span> and
+          our <span>Privacy Policy</span>
         </p>
       </div>
     </main>
